# livegraph

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
livegraph/: augment.py  cli.py  config.py  discovery.py  incremental.py  ingest.py  models.py  qualnames.py
livegraph/check/: __init__.py  checks.py  config.py  models.py  report.py  runner.py  staleness.py
livegraph/graph/: backend.py  schema.py  writer.py
livegraph/history/: __init__.py  attributor.py  extractor.py  ingest.py  models.py  writer.py
livegraph/mcp/: _tarjan.py  cypher_guard.py  diff_parser.py  server.py  tools.py  tools_architecture.py  tools_history.py  tools_neighborhood.py
livegraph/queries/: python.scm
livegraph/runtime/: coverage_adapter.py  observations.py  pytest_plugin.py  runner.py  tracer.py
livegraph/semantic/: embed.py  provider.py
livegraph/static/: extractor.py  parser.py  resolver.py
livegraph/static_ts/: extractor.py  parser.py  resolver.py  tsconfig.py
livegraph/watch/: __init__.py  debouncer.py  events.py  filters.py  loop.py  watcher.py
tests/integration/: conftest.py  test_architecture_integration.py  test_change_impact_integration.py  test_check_integration.py  test_cypher_query_integration.py  test_history_integration.py  test_incremental_integration.py  test_mcp_server_smoke.py  test_mcp_tools_integration.py  test_phase1_integration.py  test_phase2_integration.py  test_semantic_integration.py  test_semantic_neighborhood_integration.py  test_typescript_integration.py  test_watch_integration.py
tests/unit/: test_augment.py  test_cli.py  (+61 more)
(+33 files in other folders)
